--- a/Risks.html
+++ b/Risks.html
@@ -2,7 +2,9 @@
 
 <html>
 <head>
-	<title>Investing Strategies</title>
+	<title>Risks</title>
+
+	<script type="text/javascript" src="InterestCalculator.js"></script>
 
 	<style>
 		#logo_icon {
@@ -51,6 +53,10 @@
 	h3 {
   		font-family: Verdana;
   	}
+
+	h4 {
+  		font-family: Verdana;
+  	}
   	
   	p {
   		font-family: Verdana;
@@ -73,6 +79,28 @@
   	}
   	
   	button:hover {
+  		background-color: #dbdbdb;
+  		cursor: pointer;
+  	}
+
+	#button2 {
+  		padding: 14px 16px;
+  		border: none;
+  		background-color: #f0f0f0;
+  		color: #757575;
+  		font-family: Verdana;
+		text-decoration: none;
+		font-family: Verdana;
+		text-align: center;
+		font-size: 16px;
+  	}
+  	
+  	#button2:active {
+  		background-color: #4879ab;
+  		cursor: pointer;
+  	}
+  	
+  	#button2:hover {
   		background-color: #dbdbdb;
   		cursor: pointer;
   	}
@@ -101,27 +129,46 @@
  		 display: block;
 	}
 
-	#button2 {
-  		padding: 14px 16px;
-  		border: none;
-  		background-color: #f0f0f0;
-  		color: #757575;
+	td {
+  		text-align: left;
+  		padding: 8px;
   		font-family: Verdana;
-		text-decoration: none;
-		font-family: Verdana;
-		text-align: center;
-		font-size: 16px;
   	}
   	
-  	#button2:active {
-  		background-color: #4879ab;
-  		cursor: pointer;
+  	input[type=text] {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #F5F5F5;
+  		font-family: Verdana;
   	}
   	
-  	#button2:hover {
-  		background-color: #dbdbdb;
-  		cursor: pointer;
+  	input[type=text]:hover {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #EDEDED;
+  		font-family: Verdana;
   	}
+  	
+  	input[type=text]:focus {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #DCDCDC;
+  		font-family: Verdana;
+  	}
+
+	#fitbitgraph {
+		width: 1200px;
+		height: 600px;
+	}
 
 	</style>
 
@@ -135,7 +182,7 @@
 	<li><a href="Home.html">Home</a></li>
 	<li>
 		<div class="dropdown">
-    		<button class="dropbtn">Market Analysis</button>
+    		<button id="button2" class="dropbtn">Market Analysis</button>
     		<div class="dropdown-content">
       			<a href="FundamentalAnalysis.html">Fundamental Analysis</a>
      		 	<a href="TechnicalAnalysis.html">Technical Analysis</a>
@@ -175,7 +222,7 @@
 	</li>
 	<li>
 		<div class="dropdown">
-    		<button id="button2" class="dropbtn">New Companies</button>
+    		<button id ="button2" class="dropbtn">New Companies</button>
     		<div class="dropdown-content">
       			<a href="IPOs.html">IPOs</a>
      		 	<a href="SPACs.html">SPACs</a>
@@ -199,14 +246,14 @@
 	</li>
 	<li>
 		<div class="dropdown">
-    		<button id ="button2" class="dropbtn">Retirement</button>
+    		<button id="button2"class="dropbtn">Retirement</button>
     		<div class="dropdown-content">
       			<a href="401k.html">401k</a>
      		 	<a href="IRAs.html">IRAs</a>
    		</div>
   	</div>
 	</li>
-	<li><a href="Risks.html">Risk Management</a></li>
+      	<li><a class="current" href="Risks.html">Risk Management</a></li>
 	<li>
 		<div class="dropdown">
     		<button id ="button2" class="dropbtn">Staying up to Date</button>
@@ -221,24 +268,25 @@
 	<li><a href="About.html">About</a>
 </ul>
 
-<h1>Technical Analysis</h1>
-<p>Technical analysis is the use of charting and indicators to predict the future movement of a ticker, currency, or index.</p>
+<h1>Risks</h1>
+<p>Investing comes with many risks and can ruin someone if they aren't ready for the possble consequences.</p>
+<br>
+<h3>The Investment Could Crash</h3>
+<p>If an investment goes down or crashes, one could lose a lot of money. There are many reasons that an investment could crash, such as a company declaring bankrupty or an overall market crash (COVID-19, 2008, etc.)
+<br>
+<br>
+<h4>How to make sure your investment is safe</h4>
+<p>The easiest and most important way to reduce the risk of an investment crashing is by diversifying. Having all of your money invested in one place makes it much more likely that you lose a lot of money at once. However, spreading out your investments into many different areas makes you safer if the market crashes. Say technology crashes. If you are all in on Apple, you will lose a lot more than if you are half in on Apple and half in on Bank of America.
+<br>
+<p>Don't just diversify the companies though. Also diversify the forms of investment. One should invest in stocks, bonds, and housing along with other investments in order to keep themself safe. The more diversified one is, the better.</p>
+<br>
+<h4>Never invest too much of your money</h4>
+<p>Investing too much is not smart and could lead to one's economic downfall. Not having an emergency fund or just having too much money wrapped up in investments could prove to be detremental in case an emergency comes up.</h5>
+<br>
+<br>
+<h4>Pay attention to how risky and investment is</h4>
+<p>Some investments are safer than others. For example, bonds are much safer than regular stocks, but much less rewarding most of the time. Diversifying the type of investment one partakes in as well as the risk level of investments one partakes in is a smart way to secure one's investments. For this reason, it is not smart to put a lot of money into penny stocks or stock options as both are very high risk high reward investments that can easily blow up an account.</p>
 
-<h3>Charting</h3>
-<p>There are many different ways to chart, but the overall goal is to identify patterns that have the highest probability of continuing into the future. A common strategy is to look for resistance and support.
-Support is a price that if a ticker falls to, many people and algorithms will buy it, causing the price to not fall below that level. Resistance is a price that if the ticker rises to, many people and algorithms will sell the stock, causing the price to lower due to increased selling volume.
-Traders use support and resistance in order to gage when they should buy/sell a position. A trader may buy into a position if they see a ticker bounce off of its support, as the trader believes the ticker is not going to fall below that support, so being bullish is safer.
-Breaking resistance/support also helps traders the direction of a stock. If a ticker breaks through resistance, that is a very bullish sign as the increased selling pressure that comes with being at a level of resistance wasn't enough to stop the rise of the stock.</p>
-<img src="support-and-resistance.gif" alt="Support and resistance example" id="supp-resist">
-<p>In the above example, there is a level of resistance between 100,000 and 120,000 and a level of support just above 40,000.
-An investor, knowing that this ticker had bounced off the support in the past, could choose to buy in right after the stock bounces off support as, judging from the past, there is a high probability of this working.
-In this case, the support and resistance was formed over a period of multiple months, but support/resistance can be formed on any time frame, whether it be intraday or over decades. Overall, charting these levels is very helpful for an investor to know when to enter and exit a position.</p>
-
-<br></br>
-
-<h3>Indicators</h3>
-<p>Indicators are tools that help investors predict the future movement of a ticker based on an equation. Most indicators are created because people saw patterns and worked backwards to find indicators that predicted the movement. There are many indicators, RSI, MACD, and 50 day MA being a few examples.
-All indicators are found using different methods, but they all serve the same purpose of helping investors make better choices. While by themselves indicators are not enough to sway an investor's view on a stock, many indicators pointing to the same conclusion can make it obvious to an investor that a trend is forming.</p>
 
 </body>
 </html>
