--- a/forums.html
+++ b/forums.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Options Trading</title>
+	<title>Forums</title>
 
 	<script type="text/javascript" src="InterestCalculator.js"></script>
 
@@ -161,26 +161,49 @@
   		font-family: Verdana;
   	}
 
+	#fitbitgraph {
+		width: 1200px;
+		height: 600px;
+	}
+
 	</style>
 
 </head>
 
 <body>
 
-<img src="INSERT PNG" alt="INSERT IMAGE DESCRIPTION" id="logo_icon">
+<img src="InvestingBasicsLogo.png" alt="Investing Basics logo" id="logo_icon">
 
 <ul>
 	<li><a href="Home.html">Home</a></li>
-	<li><a href="TechnicalAnalysis.html">Technical Analysis</a></li>
-	<li><a href="FundamentalAnalysis.html">Fundamental Analysis</a></li>
+	<li>
+		<div class="dropdown">
+    		<button id="button2" class="dropbtn">Market Analysis</button>
+    		<div class="dropdown-content">
+      			<a href="FundamentalAnalysis.html">Fundamental Analysis</a>
+     		 	<a href="TechnicalAnalysis.html">Technical Analysis</a>
+   		</div>
+  	</div>
+	</li>
 	<li>
 	<div class="dropdown">
-    		<button class="dropbtn">Investing Strategies</button>
+    		<button id="button2" class="dropbtn">Investing Strategies</button>
     		<div class="dropdown-content">
       			<a href="LongTermInvesting.html">Long Term Investing</a>
      		 	<a href="DividendInvesting.html">Dividend Growth Investing</a>
       			<a href="DayTrading.html">Day Trading</a>
-			<a href="OptionsTrading.html">Options Trading</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+	<div class="dropdown">
+    		<button id="button2" class="dropbtn">Options Trading</button>
+    		<div class="dropdown-content">
+			<a href="Options.html">Options</a>
+      			<a href="Calls.html">Calls</a>
+     		 	<a href="Puts.html">Puts</a>
+			<a href="Spreads.html">Spreads</a>
+			<a href="IronCondors.html">Iron Condors</a>
    		</div>
   	</div>
 	</li>
@@ -193,19 +216,62 @@
    		</div>
   	</div>
 	</li>
+	<li>
+		<div class="dropdown">
+    		<button id ="button2" class="dropbtn">New Companies</button>
+    		<div class="dropdown-content">
+      			<a href="IPOs.html">IPOs</a>
+     		 	<a href="SPACs.html">SPACs</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+		<div class="dropdown">
+    		<button id="button2" class="dropbtn">How to Invest</button>
+    		<div class="dropdown-content">
+      			<a href="Brokerages.html">Brokerages</a>
+     		 	<a href="RealEstate.html">Real Estate</a>
+			<a href="Commodities.html">Commodities</a>
+     		 	<a href="BankAccounts.html">Bank Accounts</a>
+			<a href="Bonds.html">Bonds</a>
+			<a href="ValuablesCollectables.html">Valuables/Collectables</a>
+			<a href="Forex.html">Forex</a>
+			<a href="Cryptocurrencies.html">Cryptocurrencies</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+		<div class="dropdown">
+    		<button id ="button2" class="dropbtn">Retirement</button>
+    		<div class="dropdown-content">
+      			<a href="401k.html">401k</a>
+     		 	<a href="IRAs.html">IRAs</a>
+   		</div>
+  	</div>
+	</li>
+	<li><a href="Risks.html">Risk Management</a></li>
+	<li>
+		<div class="dropdown">
+    		<button class="dropbtn">Staying up to Date</button>
+    		<div class="dropdown-content">
+      			<a href="news.html">News</a>
+     		 	<a href="forums.html">Forums</a>
+     			<a href="Media.html">Media</a>
+     		 	<a href="EarningsReports.html">Earnings Reports</a>
+   		</div>
+  	</div>
+	</li>
 	<li><a href="About.html">About</a>
 </ul>
 
-<h1>Options Trading</h1>
-<p>Options are a contract that a linked with 100 shares of an underlying stock. In their most simple use, options include calls and puts. While there are many other strategies involving options, they all revolve around buying and selling the two basic contracts.
-Options can be used to hedge a current position or they can be used to profit off of movements in an underlying stock.
-Options have 3 things that determine their value: expiration date, strike price, and volatility.</p>
-
-<h3>Calls</h3>
-<p>A call is where an investor buys a contract that lets the buyer purchase 100 shares of contract at a preditermined price. Buying calls is a very bullish action.</p>
-
-<h3>Puts</h3>
-<p>A put is where an investor buys a contract that lets the buyer sell 100 shares of contract at a preditermined price. Buying puts is a very bearish action.</p>
+<h1>Forums</h1>
+<p>In order to see what others are investing in and what the consensus is on certain stocks/plays, investing forums are made.</p>
+<br>
+<p>In investing forums, investors share advice, plays, and predictions in an attempt to find the best course of action for their investing. With the growth of the internet and social media, forums have only become more popular and more useful.</p>
+<br>
+<h3>Examples of forums</h3>
+<br>
+<p>Some well known investing forums are r/WallStreetBets, StockTwits, and even the conversation section in yahoo finance. While some forums are more respected than others, most forums are still helpful because they allow many brains to come together to solve for the best course of action.</p>
 
 </body>
 </html>
