--- a/Cryptocurrencies.html
+++ b/Cryptocurrencies.html
@@ -2,7 +2,9 @@
 
 <html>
 <head>
-	<title>Investing Strategies</title>
+	<title>Cryptocurrencies</title>
+
+	<script type="text/javascript" src="InterestCalculator.js"></script>
 
 	<style>
 		#logo_icon {
@@ -77,6 +79,28 @@
   		cursor: pointer;
   	}
 
+	#button2 {
+  		padding: 14px 16px;
+  		border: none;
+  		background-color: #f0f0f0;
+  		color: #757575;
+  		font-family: Verdana;
+		text-decoration: none;
+		font-family: Verdana;
+		text-align: center;
+		font-size: 16px;
+  	}
+  	
+  	#button2:active {
+  		background-color: #4879ab;
+  		cursor: pointer;
+  	}
+  	
+  	#button2:hover {
+  		background-color: #dbdbdb;
+  		cursor: pointer;
+  	}
+
 	.dropdown-content {
   		display: none;
  		position: absolute;
@@ -101,27 +125,46 @@
  		 display: block;
 	}
 
-	#button2 {
-  		padding: 14px 16px;
-  		border: none;
-  		background-color: #f0f0f0;
-  		color: #757575;
+	td {
+  		text-align: left;
+  		padding: 8px;
   		font-family: Verdana;
-		text-decoration: none;
-		font-family: Verdana;
-		text-align: center;
-		font-size: 16px;
   	}
   	
-  	#button2:active {
-  		background-color: #4879ab;
-  		cursor: pointer;
+  	input[type=text] {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #F5F5F5;
+  		font-family: Verdana;
   	}
   	
-  	#button2:hover {
-  		background-color: #dbdbdb;
-  		cursor: pointer;
+  	input[type=text]:hover {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #EDEDED;
+  		font-family: Verdana;
   	}
+  	
+  	input[type=text]:focus {
+  		width: 150px;
+  		padding: 6px 6px;
+  		box-sizing: border-box;
+  		border: none;
+  		border-bottom: 2px solid #5997d7;
+  		background-color: #DCDCDC;
+  		font-family: Verdana;
+  	}
+
+	#fitbitgraph {
+		width: 1200px;
+		height: 600px;
+	}
 
 	</style>
 
@@ -135,7 +178,7 @@
 	<li><a href="Home.html">Home</a></li>
 	<li>
 		<div class="dropdown">
-    		<button class="dropbtn">Market Analysis</button>
+    		<button id="button2" class="dropbtn">Market Analysis</button>
     		<div class="dropdown-content">
       			<a href="FundamentalAnalysis.html">Fundamental Analysis</a>
      		 	<a href="TechnicalAnalysis.html">Technical Analysis</a>
@@ -175,7 +218,7 @@
 	</li>
 	<li>
 		<div class="dropdown">
-    		<button id="button2" class="dropbtn">New Companies</button>
+    		<button id ="button2" class="dropbtn">New Companies</button>
     		<div class="dropdown-content">
       			<a href="IPOs.html">IPOs</a>
      		 	<a href="SPACs.html">SPACs</a>
@@ -184,7 +227,7 @@
 	</li>
 	<li>
 		<div class="dropdown">
-    		<button id="button2" class="dropbtn">How to Invest</button>
+    		<button class="dropbtn">How to Invest</button>
     		<div class="dropdown-content">
       			<a href="Brokerages.html">Brokerages</a>
      		 	<a href="RealEstate.html">Real Estate</a>
@@ -221,24 +264,20 @@
 	<li><a href="About.html">About</a>
 </ul>
 
-<h1>Technical Analysis</h1>
-<p>Technical analysis is the use of charting and indicators to predict the future movement of a ticker, currency, or index.</p>
-
-<h3>Charting</h3>
-<p>There are many different ways to chart, but the overall goal is to identify patterns that have the highest probability of continuing into the future. A common strategy is to look for resistance and support.
-Support is a price that if a ticker falls to, many people and algorithms will buy it, causing the price to not fall below that level. Resistance is a price that if the ticker rises to, many people and algorithms will sell the stock, causing the price to lower due to increased selling volume.
-Traders use support and resistance in order to gage when they should buy/sell a position. A trader may buy into a position if they see a ticker bounce off of its support, as the trader believes the ticker is not going to fall below that support, so being bullish is safer.
-Breaking resistance/support also helps traders the direction of a stock. If a ticker breaks through resistance, that is a very bullish sign as the increased selling pressure that comes with being at a level of resistance wasn't enough to stop the rise of the stock.</p>
-<img src="support-and-resistance.gif" alt="Support and resistance example" id="supp-resist">
-<p>In the above example, there is a level of resistance between 100,000 and 120,000 and a level of support just above 40,000.
-An investor, knowing that this ticker had bounced off the support in the past, could choose to buy in right after the stock bounces off support as, judging from the past, there is a high probability of this working.
-In this case, the support and resistance was formed over a period of multiple months, but support/resistance can be formed on any time frame, whether it be intraday or over decades. Overall, charting these levels is very helpful for an investor to know when to enter and exit a position.</p>
-
-<br></br>
-
-<h3>Indicators</h3>
-<p>Indicators are tools that help investors predict the future movement of a ticker based on an equation. Most indicators are created because people saw patterns and worked backwards to find indicators that predicted the movement. There are many indicators, RSI, MACD, and 50 day MA being a few examples.
-All indicators are found using different methods, but they all serve the same purpose of helping investors make better choices. While by themselves indicators are not enough to sway an investor's view on a stock, many indicators pointing to the same conclusion can make it obvious to an investor that a trend is forming.</p>
+<h1>Cryptocurrencies</h1>
+<br>
+<h3>What are cryptocurrencies?</h3>
+<p>Cryptocurrencies are digital currencies in which "transactions are verified and records maintained by a decentralized system using cryptography, rather than by a centralized authority."<p>
+<p>Pretty much, they are currencies that don't take a physical form (they don't have coins or bills). They are traded online and only a fixed amount exists in the world.<p>
+<p>For example, the most popular currency, Bitcoin, only has 21 million bitcoins that can be mined (meaning only 21 million bitcoins can be in circulation). This limits inflation and gives Bitcoin and actual value.</p>
+<br>
+<h3>How can I make money from cryptocurrencies?</h3>
+<p>Similar to forex trading, trading crypto involves investing in a currency with the hopes it will increase. Also similar to forex, this is risky as it is very hard to predict the future of crytpo.</p>
+<p>Unlike crypto, though, there are less factors that can affect the price of crypto, making it slightly more predictable.</p>
+<br>
+<img src="btcchart.png" alt="All time Bitcoin chart" id="btcchart">
+<br>
+<p>Above is the all time graph for Bitcoin. Bitcoin was heavily talked about at the end of 2017, hence why it blew up to such proportions. However, as hype around it died down, it lost a lot of value. There in lies the issue with cryptocurrencies. Since they are not the official currency for any territory, if everyone quits using or caring about them, they become worthless. And, unlike a most currencies, they aren't backed by any commodity like gold so there is no safety net when it comes to crypto.</p>
 
 </body>
 </html>
