--- a/DividendInvesting.html
+++ b/DividendInvesting.html
@@ -167,12 +167,19 @@
 
 <body>
 
-<img src="INSERT PNG" alt="INSERT IMAGE DESCRIPTION" id="logo_icon">
+<img src="InvestingBasicsLogo.png" alt="Investing Basics logo" id="logo_icon">
 
 <ul>
 	<li><a href="Home.html">Home</a></li>
-	<li><a href="TechnicalAnalysis.html">Technical Analysis</a></li>
-	<li><a href="FundamentalAnalysis.html">Fundamental Analysis</a></li>
+	<li>
+		<div class="dropdown">
+    		<button id="button2" class="dropbtn">Market Analysis</button>
+    		<div class="dropdown-content">
+      			<a href="FundamentalAnalysis.html">Fundamental Analysis</a>
+     		 	<a href="TechnicalAnalysis.html">Technical Analysis</a>
+   		</div>
+  	</div>
+	</li>
 	<li>
 	<div class="dropdown">
     		<button class="dropbtn">Investing Strategies</button>
@@ -180,7 +187,18 @@
       			<a href="LongTermInvesting.html">Long Term Investing</a>
      		 	<a href="DividendInvesting.html">Dividend Growth Investing</a>
       			<a href="DayTrading.html">Day Trading</a>
-			<a href="OptionsTrading.html">Options Trading</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+	<div class="dropdown">
+    		<button id="button2" class="dropbtn">Options Trading</button>
+    		<div class="dropdown-content">
+			<a href="Options.html">Options</a>
+      			<a href="Calls.html">Calls</a>
+     		 	<a href="Puts.html">Puts</a>
+			<a href="Spreads.html">Spreads</a>
+			<a href="IronCondors.html">Iron Condors</a>
    		</div>
   	</div>
 	</li>
@@ -190,6 +208,51 @@
     		<div class="dropdown-content">
       			<a href="BullMarket.html">Bull Market</a>
      		 	<a href="BearMarket.html">Bear Market</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+		<div class="dropdown">
+    		<button id="button2" class="dropbtn">New Companies</button>
+    		<div class="dropdown-content">
+      			<a href="IPOs.html">IPOs</a>
+     		 	<a href="SPACs.html">SPACs</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+		<div class="dropdown">
+    		<button id="button2" class="dropbtn">How to Invest</button>
+    		<div class="dropdown-content">
+      			<a href="Brokerages.html">Brokerages</a>
+     		 	<a href="RealEstate.html">Real Estate</a>
+			<a href="Commodities.html">Commodities</a>
+     		 	<a href="BankAccounts.html">Bank Accounts</a>
+			<a href="Bonds.html">Bonds</a>
+			<a href="ValuablesCollectables.html">Valuables/Collectables</a>
+			<a href="Forex.html">Forex</a>
+			<a href="Cryptocurrencies.html">Cryptocurrencies</a>
+   		</div>
+  	</div>
+	</li>
+	<li>
+		<div class="dropdown">
+    		<button id ="button2" class="dropbtn">Retirement</button>
+    		<div class="dropdown-content">
+      			<a href="401k.html">401k</a>
+     		 	<a href="IRAs.html">IRAs</a>
+   		</div>
+  	</div>
+	</li>
+	<li><a href="Risks.html">Risk Management</a></li>
+	<li>
+		<div class="dropdown">
+    		<button id ="button2" class="dropbtn">Staying up to Date</button>
+    		<div class="dropdown-content">
+      			<a href="news.html">News</a>
+     		 	<a href="forums.html">Forums</a>
+     			<a href="Media.html">Media</a>
+     		 	<a href="EarningsReports.html">Earnings Reports</a>
    		</div>
   	</div>
 	</li>
